# AlzheimerMRI

./: .gitignore  README.md
Codigo/: .gitignore  CNN.py  GUI.py  README.md  TestTrain.py  alzheimer_classifier.py  infer.py  requirements.txt  test_alzheimer_classification.py
Codigo/flower/: analyze_results.py  client.py  model.py  run_experiment.py  server.py  tempCodeRunnerFile.py  visualizar_resultados.py
Codigo/inteface/: interface.py
Codigo/teste/: __init__.py  client_app.py  pyproject.toml  server_app.py  task.py
